--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nimabo0121-resume",
+  "name": "nimabo0121.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nimabo0121.github.io/nimabo0121-resume",
+  "homepage": "https://nimabo0121.github.io/nimabo0121.github.io",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
